[gd_scene load_steps=11 format=2]

[ext_resource path="res://ui/supplies_menu.gd" type="Script" id=1]
[ext_resource path="res://ui/theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/font_sizes/small.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/ui/icons/fibers_icon.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/icons/gold_icon.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/icons/iron_icon.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/icons/stone_icon.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/icons/wood_icon.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/background.png" type="Texture" id=9]
[ext_resource path="res://ui/button_groups/resource_buttons.tres" type="ButtonGroup" id=10]

[node name="Supplies" type="TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_top = 40.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource( 2 )
texture = ExtResource( 9 )
stretch_mode = 3
script = ExtResource( 1 )

[node name="Content" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 77.0
margin_top = 10.0
margin_right = -58.0
margin_bottom = -44.0

[node name="Title" type="Label" parent="Content"]
margin_right = 331.0
margin_bottom = 60.0
theme = ExtResource( 2 )
text = "Supplies"
align = 1

[node name="ResourceList" type="VBoxContainer" parent="Content"]
margin_top = 64.0
margin_right = 331.0
margin_bottom = 430.0

[node name="Wood" type="Button" parent="Content/ResourceList"]
margin_right = 331.0
margin_bottom = 70.0
focus_mode = 0
toggle_mode = true
action_mode = 0
group = ExtResource( 10 )
text = "0"
icon = ExtResource( 8 )
flat = true
align = 0

[node name="Stone" type="Button" parent="Content/ResourceList"]
margin_top = 74.0
margin_right = 331.0
margin_bottom = 144.0
focus_mode = 0
toggle_mode = true
action_mode = 0
group = ExtResource( 10 )
text = "0"
icon = ExtResource( 7 )
flat = true
align = 0

[node name="Iron" type="Button" parent="Content/ResourceList"]
margin_top = 148.0
margin_right = 331.0
margin_bottom = 218.0
focus_mode = 0
toggle_mode = true
action_mode = 0
group = ExtResource( 10 )
text = "0"
icon = ExtResource( 6 )
flat = true
align = 0

[node name="Fibers" type="Button" parent="Content/ResourceList"]
margin_top = 222.0
margin_right = 331.0
margin_bottom = 292.0
focus_mode = 0
toggle_mode = true
action_mode = 0
group = ExtResource( 10 )
text = "0"
icon = ExtResource( 4 )
flat = true
align = 0

[node name="Gold" type="Button" parent="Content/ResourceList"]
margin_top = 296.0
margin_right = 331.0
margin_bottom = 366.0
focus_mode = 0
toggle_mode = true
action_mode = 0
group = ExtResource( 10 )
text = "0"
icon = ExtResource( 5 )
flat = true
align = 0

[node name="SellOne" type="Button" parent="Content"]
margin_top = 434.0
margin_right = 331.0
margin_bottom = 480.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Sell 1"
flat = true
align = 0

[node name="SellTen" type="Button" parent="Content"]
margin_top = 484.0
margin_right = 331.0
margin_bottom = 530.0
focus_mode = 0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Sell 10"
flat = true
align = 0
